--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuration file
 # key = value
 quarkus.package.type=native
-#quarkus.native.container-build=true
+quarkus.native.container-build=true
 #Tells Quarkus which lambda handler to deploy. This can be overridden with an environment variable too.
 quarkus.lambda.handler=getResource
 #quarkus.native.buildImage=quay.io/quarkus/ubi-quarkus-native-image:19.3.1-java11
